--- a/src/Portfolio_Container/Home/Profile.css
+++ b/src/Portfolio_Container/Home/Profile.css
@@ -49,8 +49,8 @@
     justify-content: center;
      box-shadow: 0 1px 0px 0px var(--white);
      border-radius: 50%;
-     height: 390px;
-     width: 390px;
+     height: 380px;
+     width: 380px;
      margin: 0 0px 0 100px;
 }
 .profile-picture-background{
@@ -59,4 +59,17 @@
     background-image: url('../../assets/Home/profilephoto.jpg');
     background-size: cover;
     border-radius: 50%;
+    background-repeat: no-repeat;
+}
+.profile-picture-background:hover{
+    transform: scale(1.07);
+    transition:1s ease-out;
+}
+.colz .colz-icon i{
+   color: white; 
+   padding: 8px;
+   padding-left: 0px;
+}
+.colz .colz-icon i:hover{
+    transform: scale(1.5);
 }
