--- a/src/Portfolio_Container/Home/Profile.css
+++ b/src/Portfolio_Container/Home/Profile.css
@@ -1,6 +1,7 @@
 .profile-container{
     display: flex;
     align-items: center;
+    text-align: center;
     justify-content: center;
     height: 10%;
     min-height:fit-content ;
